--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -97,6 +97,20 @@ download will be attempted from
 .UR ftp://slackware.uk/sbosrcarch/
 .UE
 as a fallback measure.
+.P
+.B
+sboinstall
+will verify the local repository with
+.B
+gpg
+if
+.B
+GPG_VERIFY
+is
+.B
+TRUE\fR\
+\&.
+Only rsync repositories can be verified on Slackware 14.0 and Slackware 14.1.
 .SH OPTIONS
 .P
 .B
