pod: Minor edits.

--- a/man3/SBO::Lib::Build.3
+++ b/man3/SBO::Lib::Build.3
@@ -61,7 +61,7 @@
 .if n .ad l
 .nh
 .SH NAME
-SBO::Lib::Build \- Routines for building slackware packages from SlackBuilds.org.
+SBO::Lib::Build \- Routines for building Slackware packages from SlackBuilds.org.
 .SH SYNOPSIS
 .IX Header "SYNOPSIS"
 .Vb 1
