--- a/man3/SBO::Lib::Tree.3
+++ b/man3/SBO::Lib::Tree.3
@@ -106,7 +106,7 @@ package name to its location.
 .Ve
 .PP
 \&\f(CWis_local()\fR checks whether the given \f(CW$sbo\fR is in the \f(CW\*(C`LOCAL_OVERRIDES\*(C'\fR or
-not, and returns a true value if it is, and a false value if it isn't.
+not, and returns a true value if it is, and a false value if it is not.
 .SH AUTHORS
 .IX Header "AUTHORS"
 SBO::Lib was originally written by Jacob Pipkin <j@dawnrazor.net> with
@@ -119,4 +119,5 @@ SBO::Lib is maintained by K. Eugene Carlson <kvngncrlsn@gmail.com>.
 The sbotools are licensed under the MIT License.
 .PP
 Copyright (C) 2012\-2017, Jacob Pipkin, Luke Williams, Andreas Guldstrand.
+.PP
 Copyright (C) 2024, K. Eugene Carlson.
