--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -156,7 +156,7 @@ The program exits if the version is unsupported or if an error occurs.
 \&  my $url = get_slack_version_url();
 .Ve
 .PP
-\&\f(CWget_slack_version_url()\fR returns the default URL for the given slackware
+\&\f(CWget_slack_version_url()\fR returns the default URL for the given Slackware
 version.
 .PP
 The program exits if the version is unsupported or if an error occurs.
@@ -166,7 +166,7 @@ The program exits if the version is unsupported or if an error occurs.
 \&  my $url = get_slack_branch();
 .Ve
 .PP
-\&\f(CWget_slack_branch()\fR returns the default git branch for the given slackware
+\&\f(CWget_slack_branch()\fR returns the default git branch for the given Slackware
 version, if any. If the pulled repository does not have this branch, an onscreen
 message will appear.
 .SS idx
